# omni

./: .gitignore  OmniSub2026_VSR_Guide-1.md  README.md  environment.yml  pyproject.toml
configs/: default.yaml  kaggle.yaml  local_debug.yaml
scripts/: bootstrap_conda.ps1
src/omni_vsr/: __init__.py  config.py  tokenizer.py
src/omni_vsr/cli/: predict.py  preprocess.py  submit_kaggle.py  train.py
src/omni_vsr/inference/: __init__.py  ctc_decode.py  predictor.py
src/omni_vsr/models/: __init__.py  branchformer.py  common.py  decoder.py  factory.py  frontend.py  vsr.py
src/omni_vsr/preprocessing/: __init__.py  lip_roi.py
src/omni_vsr/training/: __init__.py  losses.py  trainer.py
src/omni_vsr/utils/: checkpoints.py  distributed.py  metrics.py  runtime.py
